--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change the <title> from "Page Title" to "Hello World" -->
-    <title>Page Title</title>
+    <title>Hello World</title>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 <body>
     <!-- Create a header element.  -->
-
+<div>
+<h1>"Your Name"</h1>
+<h3>-I did that to be funny</h3>
+</div>
     <!-- Inside the header, add an <h1> element containing your name -->
 
     <!-- Include an image -->
-
+<img src="https://i.redd.it/95xriskk0lm01.jpg" alt="This is an included image">
     <!-- Create an unordered list with 3 list items of fun facts about you -->
-
+<ul>
+  <li>I like to run</li>
+  <li>I have 3 dogs</li>
+  <li>I am learning to code</li>
+</ul>
     <!-- Create a footer element. -->
-
+<footer class="footThing">
+  <p>"If you aim at nothing, you will hit nothing" -Chang Chi</p>
+</footer>
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
