--- a/assignment/index.html
+++ b/assignment/index.html
@@ -34,3 +34,4 @@
     <!-- Inside your footer, put a <p> element with your favorite quote -->
 </body>
 </html>
+<!-- what is your favorite doughnut? :)-->
